Add verb examples

--- a/app/src/main/res/xml/verbs.xml
+++ b/app/src/main/res/xml/verbs.xml
@@ -260,7 +260,7 @@
         ta="7"
         in="parler"
         s1="Marie-Ève parle avec ses amis tous les soirs."
-        s2="Les chiffres parlent d’eux-mêmes (et non *par eux-mêmes)."
+        s2="Les chiffres parlent d’eux-mêmes."
         s3="Ils n’ont pas réussi à la faire parler."
         gr="1"
         co="1"
@@ -683,7 +683,7 @@
         in="commencer"
         s1="Il commence ses devoirs à 16 heures."
         s2="Le paragraphe qui commence le chapitre."
-        s3=""
+        s3="Les chatons vont commencer à s'intéresser à la nourriture maintenant ou la semaine prochaine."
         gr="1"
         co="2"
         de="Entreprendre. Être au commencement de. Commencer + à . Se mettre à. Débuter. Commencer + par . Ce tour insiste sur l’ordre d’une suite d’actions ou d’états."
@@ -724,7 +724,7 @@
         ta="26"
         in="partir"
         s1="Partiras-tu à la campagne cet été? Elle est partie en voyage."
-        s2="« Rien ne sert de courir : il faut partir à point »"
+        s2="« Rien ne sert de courir: il faut partir à point »"
         s3="Cet avion part de Montréal pour aller à Paris."
         gr="3"
         co="3"
@@ -741,7 +741,7 @@
         in="mourir"
         s1="Je meurs de faim."
         s2="Il était déjà mort quand le médecin est arrivé."
-        s3=""
+        s3="Je sens que quelqu'un va mourir."
         gr="3"
         co="3"
         de="Cesser de vivre. Par exagération, éprouver fortement une sensation. Être sur le point de mourir."
@@ -755,7 +755,7 @@
         in="ouvrir"
         s1="Ouvre la porte."
         s2="La station balnéaire Saint cast ouvre sa radio!"
-        s3=""
+        s3="Gérard Depardieu a été enregistré lundi 20 mai en tant qu'entrepreneur individuel en Russie et va ouvrir un restaurant dans la région de Mordovie."
         gr="3"
         co="3"
         de="Faire que ce qui était fermé ne le soit plus. Pratiquer une ouverture. Mettre en marche. Être ouvert. Devenir ouvert. Donner sur."
@@ -769,7 +769,7 @@
         in="lire"
         s1="Paulo et Geneviève lisent une bande dessinée."
         s2="Peut-on vraiment lire les lignes de la main? Le pianiste lit les notes de la partition."
-        s3=""
+        s3="Si je lis, je serai plus intelligent et je deviendrai pompier!"
         gr="3"
         co="3"
         de="Prendre connaissance d’un texte par la lecture. Déchiffrer. Être lu. Être visible, en parlant d’une pensée, d’un état d’âme."
@@ -809,9 +809,9 @@
         id="55"
         ta="12"
         in="jeter"
-        s1=""
-        s2=""
-        s3=""
+        s1="J'ai jeté l'emballage qui contenait mon nouveau téléphone."
+        s2="La sorcière lui a jeté un sort."
+        s3="C'est pas la fin du monde si on le jette à la poubelle."
         gr="1"
         co="3"
         de="Envoyer quelque chose à une certaine distance. Se défaire de (quelque chose). Mettre en place, au propre et au figuré. Se lancer. Déverser ses eaux, en parlant d’un cours d’eau."
@@ -825,7 +825,7 @@
         in="recevoir"
         s1="Il a reçu une lettre."
         s2="Elle va recevoir des amis."
-        s3=""
+        s3="Nous vous fournirons l'adresse de retour et des que le produit sera recu par notre service de retour, nous commencerons la procedure de remboursement."
         gr="3"
         co="3"
         de="Être mis en possession de ce qui est offert, donné, envoyé. Accueillir. Être l’objet de quelque chose."
@@ -895,7 +895,7 @@
         in="écouter"
         s1="Elle écoute son frère, qui lui dit de ne pas laisser son vélo non cadenassé."
         s2="Clara écoute la maîtresse, qui explique une règle de grammaire."
-        s3=""
+        s3="Si seulement j'avais écouté cet esprit de lumière, il disait la vérité."
         gr="1"
         co="3"
         de="Prêter l’oreille avec attention à. Obéir à quelqu’un, suivre ses conseils. Prendre un soin exagéré de soi-même."
@@ -908,8 +908,8 @@
         ta="7"
         in="continuer"
         s1="Elle aimerait continuer ses études à l'université."
-        s2=""
-        s3=""
+        s2="Après l'interruption, le professeur a continué son cours."
+        s3="La méthode d'adaptation des rémunérations doit continuer à s'appliquer également aux pensions, et ce de façon obligatoire."
         gr="1"
         co="3"
         de="Poursuivre ce qui est commencé. Se poursuivre. Ne pas être interrompu."
@@ -921,9 +921,9 @@
         id="63"
         ta="85"
         in="sourire"
-        s1=""
-        s2=""
-        s3=""
+        s1="J'ai souri sur la photo."
+        s2="Mais j'ai vite senti de la compassion pour ces gens et commencé à leur sourire."
+        s3="Il a souri et m'a pris un rendez-vous chez le médecin de l'école."
         gr="3"
         co="3"
         de="Plaire. Rire légèrement par un mouvement des lèvres et des yeux."
@@ -936,8 +936,8 @@
         ta="40"
         in="apercevoir"
         s1="Il apercevait la lune très clairement."
-        s2=""
-        s3=""
+        s2="Nous avons pu apercevoir des baleines depuis le bateau."
+        s3="J'ai aperçu un ours dans la forêt."
         gr="3"
         co="3"
         de="Découvrir au loin. Se rendre compte."
@@ -1006,8 +1006,8 @@
         ta="7"
         in="garder"
         s1="Elle a gardé sa souplesse."
-        s2=""
-        s3=""
+        s2="Je garde toutes les lettres que je reçois."
+        s3="J'ai demandé à mon ami de garder un siège pour moi."
         gr="1"
         co="3"
         de="Assurer la garde, la surveillance de quelqu’un, de quelque chose. Ne pas quitter. Conserver. Continuer à avoir. Se conserver. Éviter de, s’abstenir de. Se méfier de, faire attention à."
@@ -1034,8 +1034,8 @@
         ta="7"
         in="retrouver"
         s1="Il a retrouvé son chapeau."
-        s2=""
-        s3=""
+        s2="Il a enfin retrouvé ses clés perdues."
+        s3="Le château restauré a retrouvé son ancienne splendeur."
         gr="1"
         co="3"
         de="Trouver de nouveau ce qui était égaré, oublié. Être de nouveau (dans un lieu, parmi des personnes, dans une situation qu’on avait quittés)."
@@ -1076,8 +1076,8 @@
         ta="7"
         in="quitter"
         s1="La directrice a quitté son bureau pour quelques minutes."
-        s2=""
-        s3=""
+        s2="Le chien gémit dès que son maître quitte la maison."
+        s3="Le train a quitté la gare juste à l'heure."
         gr="1"
         co="3"
         de="Abandonner un lieu, une activité. Se séparer d’une personne."
@@ -1118,8 +1118,8 @@
         ta="16"
         in="crier"
         s1="Cesse de crier, essaie de discuter calmement."
-        s2=""
-        s3=""
+        s2="Les enfants aiment crier et jouer dans la cour."
+        s3="Nous avons dû crier parce que la musique était si forte."
         gr="1"
         co="3"
         de="Dire à voix haute. Réprimander. Pousser un cri. Élever la voix."
@@ -1133,7 +1133,7 @@
         in="courir"
         s1="Elle a couru le marathon."
         s2="Ils ont couru le monde."
-        s3=""
+        s3="Un guépard peut courir très rapidement."
         gr="3"
         co="3"
         de="Participer à une course. Parcourir. Être exposé à. Rechercher. Se déplacer rapidement, dans n’importe quelle direction, sans but précis. S’écouler."
@@ -1147,7 +1147,7 @@
         in="permettre"
         s1="L’école permet la consultation des dictionnaires."
         s2="Le courrier électronique permet de communiquer avec des correspondants rapidement et à peu de frais."
-        s3=""
+        s3="L'hibernation permet aux animaux de survivre aux mois d'hiver."
         gr="3"
         co="3"
         de="Autoriser, accorder. Rendre possible. S’accorder. Oser, prendre la liberté de."
@@ -1161,7 +1161,7 @@
         in="songer"
         s1="Martine songe à son avenir."
         s2="Les élèves songent à acheter un hamster pour la classe."
-        s3=""
+        s3="Vous sembliez dire qu'il fallait terminer le transport collectif avant de songer au train rapide."
         gr="1"
         co="3"
         de="Penser à quelqu’un, à quelque chose. Avoir l’intention de."
@@ -1203,7 +1203,7 @@
         in="apprendre"
         s1="Elle apprend l’histoire de l’art aux enfants."
         s2="¿Lui avez-vous appris la nouvelle?"
-        s3=""
+        s3="Le jeu est simple et facile à apprendre."
         gr="3"
         co="3"
         de="Acquérir la connaissance, la pratique de. Informer, communiquer un savoir à."
@@ -1217,7 +1217,7 @@
         in="souffrir"
         s1="Elle ne souffrira pas qu’on la contredise."
         s2="Il ne peut souffrir ces prétentieux."
-        s3=""
+        s3="Cela signifie, par exemple, qu'une personne peut souffrir de troubles de la mémoire et une autre non."
         gr="3"
         co="3"
         de="Supporter. Tolérer. Ressentir une souffrance physique ou morale. Subir une perte, un dommage. Se supporter réciproquement."
@@ -1231,7 +1231,7 @@
         in="exister"
         s1="Cette étoile existe."
         s2="La question financière n’existait pas pour eux: ils vivaient d’amour et d’eau fraîche."
-        s3=""
+        s3="Il existe un lien étroit entre l'activité physique et une bonne santé."
         gr="1"
         co="3"
         de="Être, avoir une réalité. Avoir de l’importance."
@@ -1257,9 +1257,9 @@
         id="87"
         ta="7"
         in="expliquer"
-        s1=""
-        s2=""
-        s3=""
+        s1="Mon père m'a expliqué comment réparer la voiture."
+        s2="Avant de commencer le jeu, je vous expliquerai les règles."
+        s3="J'ai essayé d'expliquer le concept à mes étudiants."
         gr="1"
         co="3"
         de="Commenter, faire comprendre. Justifier. Faire connaître sa pensée. Devenir clair, intelligible."
@@ -1272,8 +1272,8 @@
         ta="9"
         in="manger"
         s1="Il mangeait du poulet."
-        s2="Un tricot mangé par les mites, mangé aux mites."
-        s3=""
+        s2="Il a mangé le gâteau restant."
+        s3="Les éléphants mangent de grandes quantités de feuilles chaque jour."
         gr="1"
         co="3"
         de="Avaler un aliment, afin de se nourrir. Ronger. Absorber des aliments. Être consommé. Se dévorer mutuellement, se faire tort."
@@ -1301,7 +1301,7 @@
         in="oublier"
         s1="J’ai oublié cette formule mathématique."
         s2="J’ai oublié mon rendez-vous."
-        s3=""
+        s3="J'étais nerveux et j'ai oublié quelques détails de mon histoire."
         gr="1"
         co="3"
         de="Perdre le souvenir de quelqu’un, de quelque chose. Ne pas penser à quelque chose. Sortir de la mémoire. Ne pas penser à soi, à ses intérêts."
@@ -1313,9 +1313,9 @@
         id="91"
         ta="7"
         in="rentrer"
-        s1=""
-        s2=""
-        s3=""
+        s1="Au moment de rentrer à Ottawa, on se sent bien de savoir tout ce que font les excellents bénévoles de la région."
+        s2="La course me permet de me débarrasser de mon stress avant de rentrer à la maison pour être avec ma famille."
+        s3="Les chats peuvent rentrer leurs griffes."
         gr="1"
         co="3"
         de="Mettre à l’intérieur. Dissimuler sous ou dans. Retenir en soi. Entrer de nouveau. Revenir chez soi. Être compris dans."
@@ -1370,8 +1370,8 @@
         ta="7"
         in="empêcher"
         s1="Le parapet empêche les chutes."
-        s2=""
-        s3=""
+        s2="La barrière empêche les enfants de prendre les escaliers."
+        s3="Des quotas ont été instaurés pour empêcher la surpêche."
         gr="1"
         co="3"
         de="Mettre dans l’impossibilité de, faire obstacle à. Se retenir de."
@@ -1399,7 +1399,7 @@
         in="travailler"
         s1="Cette idée de partir en voyage le travaille."
         s2="Il travaille le bois, elle travaille son style."
-        s3=""
+        s3="Les ouvriers ont travaillé toute la journée."
         gr="1"
         co="3"
         de="Façonner. Préoccuper. S’efforcer de. Exercer une activité professionnelle, faire un travail."
@@ -1411,9 +1411,9 @@
         id="98"
         ta="16"
         in="s'écrier"
-        s1=""
-        s2=""
-        s3=""
+        s1="Pourquoi donc les gens ne sont-ils pas en train de s'écrier qu'ils en ont assez?"
+        s2="J'ai entendu des députés d'en face s'écrier que cette question est de compétence provinciale."
+        s3="Touchée par la réponse de la Dre Maung, une jeune femme s'est spontanément écriée qu'elle voudrait bien lui faire un cadeau, mais qu'elle ne pouvait rien lui offrir d'autre qu'une chanson."
         gr="1"
         co="3"
         de=""
@@ -1443,7 +1443,7 @@
         in="dormir"
         s1="Ils dorment depuis deux heures."
         s2="Des capitaux qui dorment dans un bas de laine."
-        s3=""
+        s3="Le bébé dormait dans son berceau."
         gr="3"
         co="4"
         de="Se reposer, être dans le sommeil. Demeurer inactif, non productif."
@@ -1457,7 +1457,7 @@
         in="oser"
         s1="Elle a osé s’habiller en panthère."
         s2="Si j’ose t’appeler, c’est que j’ai absolument besoin de ton aide."
-        s3=""
+        s3="Le garçon n'ose pas aller dans l'eau."
         gr="1"
         co="4"
         de="Risquer, avoir l’audace de. Se permettre."
@@ -1484,8 +1484,8 @@
         ta="11"
         in="répéter"
         s1="Il répète sans cesse la même chose."
-        s2=""
-        s3=""
+        s2="Mon perroquet répète tout ce que je dis."
+        s3="Le groupe a répété la chanson avant le spectacle."
         gr="1"
         co="4"
         de="Redire. Recommencer. S’exercer à dire, à exécuter ce qu’on devra faire en public. Avoir lieu à nouveau. Redire inutilement les mêmes choses."
@@ -1499,7 +1499,7 @@
         in="retourner"
         s1="Il faudrait retourner la terre."
         s2="Cette lettre a été retournée à l’expéditeur, l’adresse étant inexacte."
-        s3=""
+        s3="Les enfants jouent pendant la récréation puis retournent en classe."
         gr="1"
         co="4"
         de="Renvoyer au point de départ. Tourner dans un autre sens. Revenir. Se rendre de nouveau dans un lieu. Changer de position, regarder derrière soi."
@@ -1554,8 +1554,8 @@
         ta="11"
         in="espérer"
         s1="Il espère que l’examen ne sera pas trop difficile."
-        s2=""
-        s3=""
+        s2="Le professeur espérait une meilleure réponse de la part de l'élève."
+        s3="J'espère que tu vas bien."
         gr="1"
         co="4"
         de="Souhaiter qu’une chose se réalise."
@@ -1596,8 +1596,8 @@
         ta="7"
         in="apporter"
         s1="L’élève apporte ses cahiers à l’école."
-        s2=""
-        s3=""
+        s2="L'ingénieur a apporté une solution au problème."
+        s3="Le savoir heureux m'a apporté la tranquillité d'esprit."
         gr="1"
         co="4"
         de="Prendre avec soi et porter au lieu où est quelqu’un, quelque chose."
@@ -1610,8 +1610,8 @@
         ta="7"
         in="pleurer"
         s1="Il pleure la perte d’un ami."
-        s2=""
-        s3=""
+        s2="Ma fille a pleuré quand elle a perdu sa poupée."
+        s3="Il a pleuré la mort de son chien."
         gr="1"
         co="4"
         de="Déplorer. Répandre des larmes."
@@ -1625,7 +1625,7 @@
         in="apparaître"
         s1="Cette œuvre intemporelle n’apparaît aucunement démodée."
         s2="Il apparaît que la contestation ira en s’amplifiant."
-        s3=""
+        s3="Mon collègue est apparu quand on ne l'attendait plus."
         gr="3"
         co="4"
         de="Devenir brusquement visible, évident. Sembler, se présenter à l’esprit. Verbe impersonnel: Il semble que, il ressort que."
@@ -1639,7 +1639,7 @@
         in="juger"
         s1="Ne le juge pas sur les apparences."
         s2="Il a jugé utile de préparer ce dossier."
-        s3=""
+        s3="L'enseignante a jugé que ce livre était approprié."
         gr="1"
         co="4"
         de="Rendre la justice, régler une mésentente en qualité de juge. Porter un jugement sur. Trouver, estimer. Apprécier. Porter un jugement sur soi."
@@ -1652,7 +1652,7 @@
         ta="7"
         in="importer"
         s1="Ta réussite importe à tes amis."
-        s2=""
+        s2="Notre entreprise importe des meubles d'Italie."
         s3="Il importe à Laura de réussir."
         gr="1"
         co="4"
@@ -1695,7 +1695,7 @@
         in="raconter"
         s1="Il a une façon merveilleuse de raconter les histoires."
         s2="Il ne faut pas croire tout ce qu’on raconte."
-        s3=""
+        s3="Ma mère me racontait toujours une histoire avant d'aller au lit."
         gr="1"
         co="4"
         de="Faire le récit de. Inventer des histoires."
@@ -1723,7 +1723,7 @@
         in="causer"
         s1="La tempête a causé une panne de courant."
         s2="Ces agissements sont louches : on commence à causer dans le village."
-        s3=""
+        s3="Certains vaccins causent des réactions allergiques légères."
         gr="1"
         co="4"
         de="Être cause de. Parler, bavarder. Parler. Parler avec malveillance, jaser."
@@ -1736,8 +1736,8 @@
         ta="7"
         in="chanter"
         s1="Que me chantez-vous là?"
-        s2=""
-        s3=""
+        s2="Le coq chante chaque matin à l'aube."
+        s3="Elle avait été une chanteuse toute sa vie et n'était plus en mesure de chanter une seule note."
         gr="1"
         co="4"
         de="Raconter. Former une suite de sons musicaux avec la voix."
@@ -1750,8 +1750,8 @@
         ta="7"
         in="cacher"
         s1="L’écureuil a caché des glands."
-        s2=""
-        s3=""
+        s2="Le brouillard matinal cache les montagnes."
+        s3="L'inspecteur pense que le témoin cache des informations."
         gr="1"
         co="4"
         de="Dissimuler. Se dérober aux regards."
@@ -1764,8 +1764,8 @@
         ta="17"
         in="essayer"
         s1="Marie-Ève essaie une bicyclette."
-        s2=""
-        s3=""
+        s2="J'ai essayé une nouvelle recette de gâteau."
+        s3="Le scientifique essaie les minéraux pour en déterminer la composition."
         gr="1"
         co="4"
         de="Vérifier, expérimenter, faire l’essai de. Tenter de. Faire une tentative en vue de, s’exercer à."
@@ -1778,8 +1778,8 @@
         ta="51"
         in="asseoir"
         s1="Elle assoit son bébé sur une chaise haute."
-        s2=""
-        s3=""
+        s2="Les enfants devraient s'asseoir à l'arrière de la voiture."
+        s3="Il est important pour une famille de prendre le temps de s'asseoir ensemble et de faire un budget."
         gr="3"
         co="4"
         de="Mettre sur un siège. Établir solidement. Se mettre sur un siège."
@@ -1793,7 +1793,7 @@
         in="avancer"
         s1="Il a avancé une hypothèse."
         s2="Ma montre avance."
-        s3=""
+        s3="L'armée avançait en territoire ennemi."
         gr="1"
         co="4"
         de="Pousser en avant. Effectuer avant le moment prévu. Proposer. Aller. Progresser. Faire saillie. Être en avance. Approcher. Aller trop loin."
@@ -1820,8 +1820,8 @@
         ta="7"
         in="poser"
         s1="Cela pose un problème."
-        s2=""
-        s3=""
+        s2="Il a décidé de poser lui-même la nouvelle antenne."
+        s3="Le pilote a posé l'avion sans difficulté."
         gr="1"
         co="4"
         de="Mettre en place. Énoncer. Soulever. Servir de modèle. Revenir au sol, atterrir. Se placer."
