Initialize TextToSpeech object to null

--- a/app/src/main/res/xml/verbs.xml
+++ b/app/src/main/res/xml/verbs.xml
@@ -965,7 +965,7 @@
         in="ajouter"
         s1="N’ajoutez plus rien; j’ai compris."
         s2="¿Veux-tu ajouter du sucre à son café?"
-        s3=""
+        s3="Elle ajoute du sucre à son café pour le rendre moins amer."
         gr="1"
         co="3"
         de="Mettre en plus, additionner. Dire en plus. Augmenter. Se joindre à."
@@ -1569,7 +1569,7 @@
         in="demeurer"
         s1="Il est demeuré marqué par l’évènement."
         s2="Le poète a demeuré ici."
-        s3=""
+        s3="La formation de l'univers demeure un mystère."
         gr="1"
         co="4"
         de="Rester, continuer à être. Habiter."
